Solving problem with streamAPI (old version gradle in workflow)